--- a/index.html
+++ b/index.html
@@ -4,5 +4,9 @@
 <body>
   <script src='chrom.js' type='text/javascript'></script>
   <script src='pop.js' type='text/javascript'></script>
+  <script type='text/javascript'>
+    var p = new Pop(1000);
+    //p.findOptimalSolution();
+  </script>
 </body>
 </html>
