Included Popluation file.

--- a/02/index.html
+++ b/02/index.html
@@ -3,5 +3,6 @@
 </head>
 <body>
   <script src='Gene.js' type='text/javascript'></script>
+  <script src='Population.js' type='text/javascript'></script>
 </body>
 </html>
